Fixed layout issue in page css edit mode

--- a/stylebot/css/widget.css
+++ b/stylebot/css/widget.css
@@ -498,6 +498,9 @@ a.stylebot-accordion-active .stylebot-accordion-icon {
 #stylebot #stylebot-modal {
   padding: 7px !important;
   padding-bottom: 15px !important;
+  width: 100% !important;
+  left: 0% !important;
+  top: 0% !important;
 }
 
 /* @group Ace Editor Specific Modifications */
